--- a/.github/workflows/security-patch-release.yml
+++ b/.github/workflows/security-patch-release.yml
@@ -276,7 +276,8 @@ jobs:
           git checkout ${{ steps.set-branch.outputs.security_branch }}
 
       - name: Create PR for security patch
-        if: steps.commit-changes.outputs.changes_made == 'true'
+        id: create-pr
+        if: github.event.inputs.update_changelog == 'true' || steps.commit-changes.outputs.changes_made == 'true'
         uses: actions/github-script@v7.0.1
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
@@ -284,7 +285,7 @@ jobs:
             const prTitle = `security: release security patch v${{ steps.calculate-version.outputs.new-version }}`;
             
             // Create PR body with proper variable handling
-            let prBody = `## Security Patch Release v${{ steps.calculate-version.outputs.new-version }}
+            let prBody = `## Security Release v${{ steps.calculate-version.outputs.new-version }}
             
             ### Security Fix
             
@@ -323,6 +324,9 @@ jobs:
               prBody += `\n\n### Dev Branch Update\n\nThe dev branch version has been updated from ${{ steps.check-dev.outputs.DEV_VERSION }} to ${{ steps.check-dev.outputs.DEV_NEW_VERSION }} to avoid version collision.`;
             }
             
+            // Add note about release draft
+            prBody += `\n\n### Release Draft\n\nA GitHub Release draft will be created automatically when this PR is merged.`;
+            
             try {
               const pr = await github.rest.pulls.create({
                 owner: context.repo.owner,
@@ -358,7 +362,7 @@ jobs:
             }
 
       - name: Create GitHub Release Draft
-        if: steps.commit-changes.outputs.changes_made == 'true'
+        if: steps.create-pr.outcome == 'skipped' || steps.create-pr.outputs.result == 'null'
         uses: softprops/action-gh-release@v2
         with:
           tag_name: v${{ steps.calculate-version.outputs.new-version }}
